# coll-birth-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/superpowers/specs/: 2026-06-23-single-buffer-compaction-design.md
src/: birthday.rs  cdf.rs  cell.rs  cli.rs  collision.rs  common.rs  lib.rs  main.rs  prng.rs  sorting.rs  stats.rs  test.rs  util.rs
tests/: birthday.rs  collision.rs  parallel.rs
